fix text alignment in form legend

--- a/app/scss/_section__contact.scss
+++ b/app/scss/_section__contact.scss
@@ -26,6 +26,7 @@
         font-size: 2.6rem;
         font-weight: 600;
         text-transform: uppercase;
+        text-align: center;
 
         @include breakpoint-up(medium) {
           font-size: 3rem;
